7902003: Use unique test.classes directory for each test