@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2017, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,13 +26,6 @@
  * @summary test reflective access to private API not permitted without :open
  * @modules jdk.compiler/com.sun.tools.javac.main
  * @run main/othervm --illegal-access=deny ModuleOpen -fail
- */
-
-/*
- * @test
- * @summary test reflective access to private API is permitted with :open
- * @modules jdk.compiler/com.sun.tools.javac.main:open
- * @run main/othervm --illegal-access=deny ModuleOpen
  */
 
 /*
